<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Analyzer</string>
    <string name="enter_email">Enter you email</string>
    <string name="enter_password">Enter your password</string>
    <string name="confirm_password">Re-enter your password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="menu_login">Login</string>
    <string name="menu_registration">Register</string>
    <string name="menu_query">Submit Query</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_change_password">Change Password</string>
    <string name="welcome">Welcome</string>
    <string name="txt_campaign">Campaign:</string>
    <string name="txt_campaign_name">Campaign Name:</string>
    <string name="txt_query_title">Query Title:</string>
    <string name="txt_query">Query:</string>
    <string name="query_title_hint">Enter a title for your query</string>
    <string name="button_submit_query">Submit Query</string>
    <string name="txt_include_keywords">Include Keyword:</string>
    <string name="txt_exclude_keywords">Exclude Keyword:</string>
    <string name="query_include_keyword_hint">New keyword to include</string>
    <string name="query_exclude_keyword_hint">New keyword to exclude</string>
    <string name="button_add">Add</string>
    <string name="button_remove">Del</string>
    <string name="txt_first_name">First Name:</string>
    <string name="txt_last_name">Last Name:</string>
    <string name="txt_email">Email Address:</string>
    <string name="full_name_hint">Enter your full name</string>
    <string name="email_hint">Enter your email</string>
    <string name="txt_email_notifications">Send Email Notifications</string>
    <string name="txt_phone_notifications">Send Phone Notifications</string>
    <string name="button_update">Update</string>
    <string name="err_empty_keyword">Keyword cannot be empty</string>
    <string name="err_select_campaign">Please select a campaign</string>
    <string name="err_query_title">Please enter a query title</string>
    <string name="err_include_keywords">Please enter at least one include keyword</string>
    <string name="txt_ok">OK</string>
    <string name="txt_invalid_login">Invalid Login</string>
    <string name="err_check_credentials">Please check your email and password</string>
    <string name="err_dublicate_email">Email address already taken</string>
    <string name="txt_loading">Loading&#8230;</string>
    <string name="err_email">Please enter a valid email address</string>
    <string name="err_password">Password has to be at least 6 characters long</string>
    <string name="err_confirm_password">Passwords do not match</string>
    <string name="txt_query_submitted">Query Submitted</string>
    <string name="txt_query_submit_info">Your query has been submitted and will be processed shortly</string>
    <string name="txt_campaign_submitted">Campaign Submitted</string>
    <string name="txt_campaign_submit_info">Your campaign has been submitted successfully</string>
    <string name="txt_error">Error</string>
    <string name="txt_query_submit_error">An error occurred while submitting the query, please try again</string>
    <string name="err_first_name">Please enter your first name</string>
    <string name="err_last_name">Please enter your last name</string>
    <string name="err_email_address">Please enter your email address</string>
    <string name="txt_changes_saved">Changes Saved</string>
    <string name="txt_user_settings_updated">User settings have successfully been updated</string>
    <string name="txt_settings_update_error">An error occurred while updating user settings, please try again</string>
    <string name="txt_positive">Positive</string>
    <string name="txt_negative">Negative</string>
    <string name="txt_neutral">Neutral</string>
    <string name="txt_all">All</string>
    <string name="txt_new">New</string>
    <string name="txt_campaign_description">Campaign Description:</string>
    <string name="campaign_name_hint">Enter a campaign name</string>
    <string name="err_campaign_name">Please enter a campaign name</string>
    <string name="err_campaign_description">Please enter a campaign description</string>
    <string name="campaign_description_hint">Enter a short description for your campaign</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Register</string>
    <string name="menu_view_report">View Report</string>
    <string name="menu_view_query">View Query</string>
    <string name="menu_add_query">New Query</string>
    <string name="menu_add_campaign">New Campaign</string>
    <string name="menu_profile">Profile</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_name">Full Name</string>
    <string name="err_name">Please enter your name</string>
    <string name="err_could_not_save">Could not be saved</string>
    <string name="txt_reports">Reports</string>
    <string name="txt_queries">Queries</string>
    <string name="txt_add_query">Add Query</string>
    <string name="txt_add_campaign">Add Campaign</string>
    <string name="button_create">Create</string>
    <string name="profile_updated">Profile successfully updated</string>
    <string name="txt_change_pass">Change Password</string>
    <string name="enter_current_password">Enter your current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="button_change_password">Change Password</string>
    <string name="err_current_pass">Wrong password</string>
    <string name="password_changed">Password successfully changed</string>
    <string name="txt_error_get">An error occurred while retrieving your data</string>
    <string name="txt_word">Word</string>
    <string name="txt_frequency">Frequency</string>
</resources>
