<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:padding="@dimen/heavy_padding" >
            
        <!-- page title -->
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/light_margin"
            android:text="@string/txt_add_campaign"
            android:textColor="@color/twitter_blue"
            android:textSize="@dimen/font_size_large" />
        
                <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_campaign"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/font_size_regular"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/light_margin" />
                
                    <!-- new campaign name -->
                    <TextView
                        android:id="@+id/campaign_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_campaign_name"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/font_size_regular"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/light_margin"
            />
                    
                    <EditText
            android:id="@+id/et_campaign_name"
            android:layout_width="@dimen/form_item_wide"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/font_size_regular"
            android:hint="@string/campaign_name_hint"
            android:layout_marginTop="@dimen/light_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            />
                    
                    <!-- campaign description -->
                    <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_campaign_description"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/font_size_regular"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/light_margin" />
                    
                    <EditText
            android:id="@+id/et_campaign_description"
            android:layout_width="@dimen/form_item_wide"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/font_size_regular"
            android:lines="5"
            android:hint="@string/campaign_description_hint"
            android:layout_marginTop="@dimen/light_margin"
            android:layout_marginBottom="@dimen/medium_margin" />
                                    
                    <!-- Add Campaign Button -->
                <Button 
                    android:id="@+id/button_add_campaign"
                    android:layout_width="@dimen/form_item_narrow"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:padding="@dimen/medium_padding"
                    android:background="@color/twitter_blue"
                    android:text="@string/button_add"
                    android:textColor="@color/pure_white"
                    android:textSize="@dimen/font_size_regular"
                    android:onClick="addCampaign"
                     />
        
    </LinearLayout>
    
</ScrollView>