<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <!-- Menu View, initially behind content view -->
    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:background="@color/tinted_white" >
        
        <!-- add menu buttons here -->
        <TextView 
            android:id="@+id/menu_view_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/menu_view_report"
            android:textColor="@color/twitter_dark_blue"
            android:textSize="@dimen/font_size_large" />
        
        <TextView 
            android:id="@+id/menu_view_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/menu_view_query"
            android:textColor="@color/twitter_dark_blue"
            android:textSize="@dimen/font_size_large" />
        
        <TextView 
            android:id="@+id/menu_add_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/menu_add_query"
            android:textColor="@color/twitter_dark_blue"
            android:textSize="@dimen/font_size_large" />
        
        <TextView 
            android:id="@+id/menu_add_campaign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/menu_add_campaign"
            android:textColor="@color/twitter_dark_blue"
            android:textSize="@dimen/font_size_large" />
        
        <TextView 
            android:id="@+id/menu_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/menu_profile"
            android:textColor="@color/twitter_dark_blue"
            android:textSize="@dimen/font_size_large" />
        
        <TextView 
            android:id="@+id/menu_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/menu_change_password"
            android:textColor="@color/twitter_dark_blue"
            android:textSize="@dimen/font_size_large" />
        
    </LinearLayout>
    
    <!-- Content View, a title and a view pager for content -->
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" 
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" >
        
        <!-- app name title, doubles as toggle menu button -->
        <TextView 
            android:id="@+id/toggle_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/app_name"
            android:textColor="@color/twitter_blue"
            android:textSize="@dimen/font_size_large"
            android:background="@color/tinted_white" />
        
        <!-- any actual content goes in the pager dynamically -->
        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    
    </LinearLayout>
    
</RelativeLayout>
