<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:padding="@dimen/heavy_padding" >
        
        <!-- page title -->
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/light_margin"
            android:text="@string/txt_change_pass"
            android:textColor="@color/twitter_blue"
            android:textSize="@dimen/font_size_large" />

        <!-- form current password input -->
		    <EditText 
		        android:id="@+id/edit_current_password"
		        android:layout_width="@dimen/form_item_wide"
		        android:layout_height="wrap_content"
		        android:layout_margin="@dimen/medium_margin"
		        android:layout_gravity="center"
		        android:textColor="@color/dark_gray"
		        android:inputType="textPassword"
		        android:hint="@string/enter_current_password"
		        android:textSize="@dimen/font_size_regular" />
		    
		    <!-- form new password input -->
		    <EditText 
		        android:id="@+id/edit_new_password"
		        android:layout_width="@dimen/form_item_wide"
		        android:layout_height="wrap_content"
		        android:layout_margin="@dimen/medium_margin"
		        android:layout_gravity="center"
		        android:textColor="@color/dark_gray"
		        android:inputType="textPassword"
		        android:hint="@string/enter_new_password"
		        android:textSize="@dimen/font_size_regular" />
		    
		    <!-- form new password confirmation input -->
        <EditText 
            android:id="@+id/edit_confirm_new_password"
            android:layout_width="@dimen/form_item_wide"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:layout_gravity="center"
            android:textColor="@color/dark_gray"
            android:inputType="textPassword"
            android:hint="@string/confirm_new_password"
            android:textSize="@dimen/font_size_regular" />

        <!-- change password button -->
        <Button 
            android:id="@+id/button_change_password"
            android:layout_width="@dimen/form_item_regular"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/heavy_margin"
            android:layout_gravity="center"
            android:padding="@dimen/heavy_padding"
            android:gravity="center"
            android:background="@color/twitter_dark_blue"
            android:text="@string/button_change_password"
            android:textColor="@color/pure_white"
            android:textSize="@dimen/font_size_regular" />
    
    </LinearLayout>
    
</ScrollView>
