<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/heavy_padding" >

        <!-- page title -->
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/light_margin"
            android:text="@string/txt_queries"
            android:textColor="@color/twitter_blue"
            android:textSize="@dimen/font_size_large" />

        <!-- campaign drop down list -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/light_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/txt_campaign"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/font_size_regular" />

        <Spinner
            android:id="@+id/spinner_campaign_name"
            android:layout_width="@dimen/form_item_wide"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginTop="@dimen/light_margin"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/font_size_regular" />

        <!-- query number dropdown -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/light_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/txt_query"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/font_size_regular" />

        <Spinner
            android:id="@+id/spinner_query_number"
            android:layout_width="@dimen/form_item_wide"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginTop="@dimen/light_margin"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/font_size_regular" />

        <!-- include keywords -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/light_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/txt_include_keywords"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/font_size_regular" />

        <!-- list view for included keywords -->
        <LinearLayout
            android:id="@+id/list_include_keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_borders"
            android:orientation="vertical"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/font_size_regular" />

        <!-- exclude keywords -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/light_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/txt_exclude_keywords"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/font_size_regular" />

        <!-- list view for excluded keywords -->
        <LinearLayout
            android:id="@+id/list_exclude_keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_borders"
            android:orientation="vertical"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/font_size_regular" />

    </LinearLayout>

</ScrollView>